--- a/themes/bcr_bootstrap/css/style.css
+++ b/themes/bcr_bootstrap/css/style.css
@@ -672,7 +672,22 @@ a:hover {
   border: 0;
 }
 
-/* line 4, ../sass/_player.scss */
+/* line 3, ../sass/_player.scss */
+#chat-block {
+  position: fixed;
+  top: 12px;
+  right: 75px;
+  border: 1px solid black;
+  text-transform: uppercase;
+  z-index: 2147483649;
+  font-family: 'DIN Next W02 Medium', 'DIN Alternate', 'Helvetica Neue', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 0.01em;
+  font-weight: bold;
+  padding: 8px 12px 6px;
+}
+
+/* line 14, ../sass/_player.scss */
 .region-persistent {
   position: fixed;
   width: 100%;
@@ -682,17 +697,13 @@ a:hover {
   background: white;
   z-index: 10;
 }
-/* line 14, ../sass/_player.scss */
+/* line 24, ../sass/_player.scss */
 .region-persistent #live-options-toggle {
   position: fixed;
   visibility: hidden;
 }
-/* line 19, ../sass/_player.scss */
+/* line 29, ../sass/_player.scss */
 .region-persistent .mobile-links {
-  position: absolute;
-  z-index: 10;
-  left: 80px;
-  top: 10px;
   font-family: 'DIN Next W02 Medium', 'DIN Alternate', 'Helvetica Neue', sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.01em;
@@ -700,15 +711,12 @@ a:hover {
   padding: 8px 12px 6px;
   border: 1px solid black;
   cursor: pointer;
-  display: block;
+  display: inline-block;
+  position: relative;
+  top: 6px;
+  left: 7px;
 }
-@media only screen and (min-device-width: 769px) {
-  /* line 19, ../sass/_player.scss */
-  .region-persistent .mobile-links {
-    display: none;
-  }
-}
-/* line 34, ../sass/_player.scss */
+/* line 43, ../sass/_player.scss */
 .region-persistent .live-options {
   font-family: 'DIN Next W02 Medium', 'DIN Alternate', 'Helvetica Neue', sans-serif;
   text-transform: uppercase;
@@ -716,23 +724,23 @@ a:hover {
   font-weight: bold;
   position: fixed;
   border: 1px solid black;
-  top: 2.5%;
-  left: 2.5%;
-  width: 95%;
-  height: 95%;
+  top: 59px;
+  left: 5%;
+  width: 90%;
+  height: 80%;
   display: none;
   background: white;
   z-index: 100;
 }
-/* line 46, ../sass/_player.scss */
+/* line 55, ../sass/_player.scss */
 .region-persistent .live-options label {
   cursor: pointer;
 }
-/* line 48, ../sass/_player.scss */
+/* line 57, ../sass/_player.scss */
 .region-persistent .live-options label:hover {
   color: red;
 }
-/* line 53, ../sass/_player.scss */
+/* line 62, ../sass/_player.scss */
 .region-persistent .live-options ul {
   list-style: none;
   width: 50%;
@@ -746,24 +754,24 @@ a:hover {
   -webkit-transform: translate(0, -50%);
   transform: translate(0, -50%);
 }
-/* line 62, ../sass/_player.scss */
+/* line 71, ../sass/_player.scss */
 .region-persistent .live-options ul li {
   padding: 20px 0 18px;
   border-top: 1px solid black;
 }
-/* line 69, ../sass/_player.scss */
+/* line 78, ../sass/_player.scss */
 .region-persistent #live-options-toggle:checked ~ .live-options {
   display: block;
 }
-/* line 73, ../sass/_player.scss */
+/* line 82, ../sass/_player.scss */
 .region-persistent #logo-element, .region-persistent iframe, .region-persistent .streaming-menu {
   display: inline-block;
 }
-/* line 78, ../sass/_player.scss */
+/* line 87, ../sass/_player.scss */
 .region-persistent #block-bcr-blocks-bcr-player {
   margin: inherit auto inherit auto;
 }
-/* line 82, ../sass/_player.scss */
+/* line 91, ../sass/_player.scss */
 .region-persistent .logo-rel .bcr-logo {
   position: relative;
   left: 20px;
@@ -771,7 +779,7 @@ a:hover {
   width: 50px;
   height: 50px;
 }
-/* line 92, ../sass/_player.scss */
+/* line 101, ../sass/_player.scss */
 .region-persistent .streaming-menu {
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -780,11 +788,11 @@ a:hover {
   top: -43px;
   left: -100px;
 }
-/* line 100, ../sass/_player.scss */
+/* line 109, ../sass/_player.scss */
 .region-persistent .streaming-menu a:hover {
   background: none !important;
 }
-/* line 105, ../sass/_player.scss */
+/* line 114, ../sass/_player.scss */
 .region-persistent iframe {
   border: 0px;
   height: 60px;
@@ -796,60 +804,65 @@ a:hover {
   margin: 0px !important;
   position: relative;
 }
-/* line 119, ../sass/_player.scss */
+/* line 128, ../sass/_player.scss */
 .region-persistent iframe, .region-persistent a {
   display: inline-block;
 }
 
 /* line 1, ../sass/_airtime.scss */
+#block-bcr-blocks-bcr-player {
+  display: inline-block;
+  max-width: 280px;
+  top: -7px !important;
+}
+
+/* line 6, ../sass/_airtime.scss */
 #block-airtimewidgets-airtime-nowplaying {
   position: relative;
-  z-index: 10;
+  top: 13px;
+  max-width: 700px;
+  display: inline-block;
 }
-/* line 4, ../sass/_airtime.scss */
+/* line 11, ../sass/_airtime.scss */
 #block-airtimewidgets-airtime-nowplaying .container {
   padding-right: 0;
 }
 
-/* line 9, ../sass/_airtime.scss */
+/* line 16, ../sass/_airtime.scss */
 #headerLiveHolder ul li, #headerLiveTrackHolder ul li {
   overflow: visible;
   height: 18px;
 }
 
-/* line 14, ../sass/_airtime.scss */
+/* line 21, ../sass/_airtime.scss */
 #headerLiveHolder {
-  position: fixed;
-  top: 12px;
-  width: 700px !important;
-  margin-left: 250px;
   font-family: 'DIN Next W02 Medium', 'DIN Alternate', 'Helvetica Neue', sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.01em;
   font-weight: bold;
 }
-/* line 22, ../sass/_airtime.scss */
+/* line 29, ../sass/_airtime.scss */
 #headerLiveHolder h4 {
   display: none;
 }
-/* line 26, ../sass/_airtime.scss */
+/* line 33, ../sass/_airtime.scss */
 #headerLiveHolder li {
   display: inline-block;
   font-size: 12px !important;
   line-height: 18px !important;
 }
-/* line 32, ../sass/_airtime.scss */
+/* line 39, ../sass/_airtime.scss */
 #headerLiveHolder .current {
   width: 100% !important;
   margin: 0;
   padding: 0;
 }
-/* line 38, ../sass/_airtime.scss */
+/* line 45, ../sass/_airtime.scss */
 #headerLiveHolder .next {
   width: auto !important;
   display: block;
 }
-/* line 43, ../sass/_airtime.scss */
+/* line 50, ../sass/_airtime.scss */
 #headerLiveHolder .time-elapsed,
 #headerLiveHolder .time-remaining {
   position: relative;
@@ -859,22 +872,22 @@ a:hover {
   float: right;
 }
 
-/* line 53, ../sass/_airtime.scss */
+/* line 60, ../sass/_airtime.scss */
 #headerLiveHolder ul li.current {
   color: black;
 }
 
-/* line 57, ../sass/_airtime.scss */
+/* line 64, ../sass/_airtime.scss */
 #headerLiveHolder ul li span#time-elapsed {
   right: auto;
 }
 
-/* line 61, ../sass/_airtime.scss */
+/* line 68, ../sass/_airtime.scss */
 #headerLiveHolder ul li span#time-elapsed:before {
   content: "+";
 }
 
-/* line 65, ../sass/_airtime.scss */
+/* line 72, ../sass/_airtime.scss */
 #headerLiveHolder ul li span#time-remaining:before {
   content: "-";
 }
@@ -902,7 +915,7 @@ body {
  */
 /* line 30, ../sass/bcr-jplayer.scss */
 .bcr-logo {
-  display: inline-block;
+  margin-top: 9px;
   width: 39px;
   height: 38px;
   background: url("../images/logospot.png") no-repeat;
@@ -920,64 +933,64 @@ body {
 .jp-audio {
   display: inline-block;
   top: 0px;
+  width: 140px;
 }
-/* line 55, ../sass/bcr-jplayer.scss */
+/* line 56, ../sass/bcr-jplayer.scss */
 .jp-audio .jp-controls {
-  vertical-align: middle;
   display: none;
   margin: 0;
   padding: 0;
   position: relative;
 }
 @media only screen and (min-device-width: 769px) {
-  /* line 55, ../sass/bcr-jplayer.scss */
+  /* line 56, ../sass/bcr-jplayer.scss */
   .jp-audio .jp-controls {
     display: inline-block;
   }
 }
-/* line 64, ../sass/bcr-jplayer.scss */
+/* line 65, ../sass/bcr-jplayer.scss */
 .jp-audio .jp-controls li {
   display: inline-block;
   list-style: none;
   position: absolute;
   top: -9px;
 }
-/* line 70, ../sass/bcr-jplayer.scss */
+/* line 71, ../sass/bcr-jplayer.scss */
 .jp-audio .jp-controls li.play-control {
   left: 20px;
 }
-/* line 74, ../sass/bcr-jplayer.scss */
+/* line 75, ../sass/bcr-jplayer.scss */
 .jp-audio .jp-controls li.vol-control {
   left: 70px;
 }
-/* line 78, ../sass/bcr-jplayer.scss */
+/* line 79, ../sass/bcr-jplayer.scss */
 .jp-audio .jp-controls li a {
   vertical-align: middle;
   position: absolute;
   outline: none;
 }
-/* line 85, ../sass/bcr-jplayer.scss */
+/* line 86, ../sass/bcr-jplayer.scss */
 .jp-audio .jp-controls li .jp-play {
   width: 20px;
   height: 20px;
   background: url("../images/jplayer-buttons/player-button--play.png") no-repeat center;
   background-size: 16px;
 }
-/* line 91, ../sass/bcr-jplayer.scss */
+/* line 92, ../sass/bcr-jplayer.scss */
 .jp-audio .jp-controls li .jp-pause {
   width: 20px;
   height: 20px;
   background: url("../images/jplayer-buttons/player-button--pause.png") no-repeat center;
   background-size: 17px;
 }
-/* line 97, ../sass/bcr-jplayer.scss */
+/* line 98, ../sass/bcr-jplayer.scss */
 .jp-audio .jp-controls li .jp-mute {
   width: 22px;
   height: 20px;
   background: url("../images/jplayer-buttons/vol-button--off.png") no-repeat center;
   background-size: 22px;
 }
-/* line 103, ../sass/bcr-jplayer.scss */
+/* line 104, ../sass/bcr-jplayer.scss */
 .jp-audio .jp-controls li .jp-unmute {
   width: 23px;
   height: 20px;
@@ -985,7 +998,7 @@ body {
   background-size: 23px;
 }
 
-/* line 117, ../sass/bcr-jplayer.scss */
+/* line 118, ../sass/bcr-jplayer.scss */
 div.jp-audio,
 div.jp-video {
   /* Edit the font-size to counteract inherited font sizing.
@@ -998,20 +1011,20 @@ div.jp-video {
   color: #666;
 }
 
-/* line 132, ../sass/bcr-jplayer.scss */
+/* line 133, ../sass/bcr-jplayer.scss */
 div.label {
   font-size: 1em;
   font-weight: bold;
   text-indent: 5px;
 }
 
-/* line 139, ../sass/bcr-jplayer.scss */
+/* line 140, ../sass/bcr-jplayer.scss */
 div.jp-interface ul.jp-controls a {
   overflow: hidden;
   text-indent: -9999px;
 }
 
-/* line 144, ../sass/bcr-jplayer.scss */
+/* line 145, ../sass/bcr-jplayer.scss */
 a.jp-stop {
   background: url("jplayer.blue.monday.jpg") 0 -83px no-repeat;
   width: 28px;
@@ -1019,85 +1032,85 @@ a.jp-stop {
   z-index: 1;
 }
 
-/* line 150, ../sass/bcr-jplayer.scss */
+/* line 151, ../sass/bcr-jplayer.scss */
 a.jp-stop:hover {
   background: url("jplayer.blue.monday.jpg") -29px -83px no-repeat;
 }
 
-/* line 153, ../sass/bcr-jplayer.scss */
+/* line 154, ../sass/bcr-jplayer.scss */
 div.jp-audio div.jp-type-playlist a.jp-previous {
   left: 20px;
   top: 26px;
 }
 
-/* line 157, ../sass/bcr-jplayer.scss */
+/* line 158, ../sass/bcr-jplayer.scss */
 div.jp-video div.jp-type-playlist a.jp-previous {
   top: 21px;
 }
 
-/* line 160, ../sass/bcr-jplayer.scss */
+/* line 161, ../sass/bcr-jplayer.scss */
 div.jp-video-270p div.jp-type-playlist a.jp-previous {
   left: 192px;
 }
 
-/* line 163, ../sass/bcr-jplayer.scss */
+/* line 164, ../sass/bcr-jplayer.scss */
 div.jp-video-360p div.jp-type-playlist a.jp-previous {
   left: 272px;
 }
 
-/* line 166, ../sass/bcr-jplayer.scss */
+/* line 167, ../sass/bcr-jplayer.scss */
 a.jp-previous {
   background: url("jplayer.blue.monday.jpg") 0 -112px no-repeat;
   width: 28px;
   height: 28px;
 }
 
-/* line 171, ../sass/bcr-jplayer.scss */
+/* line 172, ../sass/bcr-jplayer.scss */
 a.jp-previous:hover {
   background: url("jplayer.blue.monday.jpg") -29px -112px no-repeat;
 }
 
-/* line 174, ../sass/bcr-jplayer.scss */
+/* line 175, ../sass/bcr-jplayer.scss */
 div.jp-audio div.jp-type-playlist a.jp-next {
   left: 88px;
   top: 26px;
 }
 
-/* line 178, ../sass/bcr-jplayer.scss */
+/* line 179, ../sass/bcr-jplayer.scss */
 div.jp-video div.jp-type-playlist a.jp-next {
   top: 21px;
 }
 
-/* line 181, ../sass/bcr-jplayer.scss */
+/* line 182, ../sass/bcr-jplayer.scss */
 div.jp-video-270p div.jp-type-playlist a.jp-next {
   left: 260px;
 }
 
-/* line 184, ../sass/bcr-jplayer.scss */
+/* line 185, ../sass/bcr-jplayer.scss */
 div.jp-video-360p div.jp-type-playlist a.jp-next {
   left: 340px;
 }
 
-/* line 187, ../sass/bcr-jplayer.scss */
+/* line 188, ../sass/bcr-jplayer.scss */
 a.jp-next {
   background: url("jplayer.blue.monday.jpg") 0 -141px no-repeat;
   width: 28px;
   height: 28px;
 }
 
-/* line 192, ../sass/bcr-jplayer.scss */
+/* line 193, ../sass/bcr-jplayer.scss */
 a.jp-next:hover {
   background: url("jplayer.blue.monday.jpg") -29px -141px no-repeat;
 }
 
-/* line 195, ../sass/bcr-jplayer.scss */
+/* line 196, ../sass/bcr-jplayer.scss */
 div.jp-progress {
   position: absolute;
   overflow: hidden;
   background-color: #ddd;
 }
 
-/* line 200, ../sass/bcr-jplayer.scss */
+/* line 201, ../sass/bcr-jplayer.scss */
 div.jp-audio div.jp-type-single div.jp-progress {
   top: 32px;
   left: 130px;
@@ -1105,7 +1118,7 @@ div.jp-audio div.jp-type-single div.jp-progress {
   height: 15px;
 }
 
-/* line 206, ../sass/bcr-jplayer.scss */
+/* line 207, ../sass/bcr-jplayer.scss */
 div.jp-audio div.jp-type-playlist div.jp-progress {
   top: 32px;
   left: 164px;
@@ -1113,7 +1126,7 @@ div.jp-audio div.jp-type-playlist div.jp-progress {
   height: 15px;
 }
 
-/* line 212, ../sass/bcr-jplayer.scss */
+/* line 213, ../sass/bcr-jplayer.scss */
 div.jp-video div.jp-progress {
   top: 0px;
   left: 0px;
@@ -1121,7 +1134,7 @@ div.jp-video div.jp-progress {
   height: 10px;
 }
 
-/* line 218, ../sass/bcr-jplayer.scss */
+/* line 219, ../sass/bcr-jplayer.scss */
 div.jp-seek-bar {
   background: url("jplayer.blue.monday.jpg") 0 -202px repeat-x;
   width: 0px;
@@ -1130,7 +1143,7 @@ div.jp-seek-bar {
   cursor: pointer;
 }
 
-/* line 225, ../sass/bcr-jplayer.scss */
+/* line 226, ../sass/bcr-jplayer.scss */
 div.jp-play-bar {
   background: url("jplayer.blue.monday.jpg") 0 -218px repeat-x;
   width: 0px;
@@ -1139,12 +1152,12 @@ div.jp-play-bar {
 }
 
 /* The seeking class is added/removed inside jPlayer */
-/* line 233, ../sass/bcr-jplayer.scss */
+/* line 234, ../sass/bcr-jplayer.scss */
 div.jp-seeking-bg {
   background: url("pbar-ani.gif");
 }
 
-/* line 238, ../sass/bcr-jplayer.scss */
+/* line 239, ../sass/bcr-jplayer.scss */
 div.jp-volume-bar {
   position: absolute;
   overflow: hidden;
@@ -1154,51 +1167,51 @@ div.jp-volume-bar {
   cursor: pointer;
 }
 
-/* line 246, ../sass/bcr-jplayer.scss */
+/* line 247, ../sass/bcr-jplayer.scss */
 div.jp-audio div.jp-type-single div.jp-volume-bar {
   top: 37px;
   left: 302px;
 }
 
-/* line 250, ../sass/bcr-jplayer.scss */
+/* line 251, ../sass/bcr-jplayer.scss */
 div.jp-audio div.jp-type-playlist div.jp-volume-bar {
   top: 37px;
   left: 324px;
 }
 
-/* line 256, ../sass/bcr-jplayer.scss */
+/* line 257, ../sass/bcr-jplayer.scss */
 div.jp-video div.jp-volume-bar {
   top: 32px;
 }
 
-/* line 259, ../sass/bcr-jplayer.scss */
+/* line 260, ../sass/bcr-jplayer.scss */
 div.jp-video-270p div.jp-type-single div.jp-volume-bar {
   left: 332px;
 }
 
-/* line 262, ../sass/bcr-jplayer.scss */
+/* line 263, ../sass/bcr-jplayer.scss */
 div.jp-video-270p div.jp-type-playlist div.jp-volume-bar {
   left: 391px;
 }
 
-/* line 265, ../sass/bcr-jplayer.scss */
+/* line 266, ../sass/bcr-jplayer.scss */
 div.jp-video-360p div.jp-type-single div.jp-volume-bar {
   left: 412px;
 }
 
-/* line 268, ../sass/bcr-jplayer.scss */
+/* line 269, ../sass/bcr-jplayer.scss */
 div.jp-video-360p div.jp-type-playlist div.jp-volume-bar {
   left: 471px;
 }
 
-/* line 271, ../sass/bcr-jplayer.scss */
+/* line 272, ../sass/bcr-jplayer.scss */
 div.jp-volume-bar-value {
   background: url("jplayer.blue.monday.jpg") 0 -256px repeat-x;
   width: 0px;
   height: 5px;
 }
 
-/* line 276, ../sass/bcr-jplayer.scss */
+/* line 277, ../sass/bcr-jplayer.scss */
 div.jp-current-time,
 div.jp-duration {
   position: absolute;
@@ -1206,12 +1219,12 @@ div.jp-duration {
   font-style: oblique;
 }
 
-/* line 282, ../sass/bcr-jplayer.scss */
+/* line 283, ../sass/bcr-jplayer.scss */
 div.jp-duration {
   text-align: right;
 }
 
-/* line 285, ../sass/bcr-jplayer.scss */
+/* line 286, ../sass/bcr-jplayer.scss */
 div.jp-audio div.jp-type-single div.jp-current-time,
 div.jp-audio div.jp-type-single div.jp-duration {
   top: 49px;
@@ -1219,7 +1232,7 @@ div.jp-audio div.jp-type-single div.jp-duration {
   width: 122px;
 }
 
-/* line 291, ../sass/bcr-jplayer.scss */
+/* line 292, ../sass/bcr-jplayer.scss */
 div.jp-audio div.jp-type-playlist div.jp-current-time,
 div.jp-audio div.jp-type-playlist div.jp-duration {
   top: 49px;
@@ -1227,7 +1240,7 @@ div.jp-audio div.jp-type-playlist div.jp-duration {
   width: 122px;
 }
 
-/* line 300, ../sass/bcr-jplayer.scss */
+/* line 301, ../sass/bcr-jplayer.scss */
 div.jp-playlist {
   /* width:418px; */
   width: 100%;
@@ -1236,7 +1249,7 @@ div.jp-playlist {
   border-top: none;
 }
 
-/* line 308, ../sass/bcr-jplayer.scss */
+/* line 309, ../sass/bcr-jplayer.scss */
 div.jp-playlist ul {
   list-style-type: none;
   margin: 0;
@@ -1248,13 +1261,13 @@ div.jp-playlist ul {
   font-size: .72em;
 }
 
-/* line 320, ../sass/bcr-jplayer.scss */
+/* line 321, ../sass/bcr-jplayer.scss */
 div.jp-type-single div.jp-playlist li {
   padding: 5px 0 5px 20px;
   font-weight: bold;
 }
 
-/* line 324, ../sass/bcr-jplayer.scss */
+/* line 325, ../sass/bcr-jplayer.scss */
 div.jp-type-playlist div.jp-playlist li {
   padding: 5px 0 4px 20px;
   border-bottom: 1px solid #eee;
@@ -1266,36 +1279,36 @@ div.jp-video div.jp-playlist li {
   font-weight:bold;
 }
 */
-/* line 334, ../sass/bcr-jplayer.scss */
+/* line 335, ../sass/bcr-jplayer.scss */
 div.jp-type-playlist div.jp-playlist li.jp-playlist-last {
   padding: 5px 0 5px 20px;
   border-bottom: none;
 }
 
-/* line 338, ../sass/bcr-jplayer.scss */
+/* line 339, ../sass/bcr-jplayer.scss */
 div.jp-type-playlist div.jp-playlist li.jp-playlist-current {
   list-style-type: square;
   list-style-position: inside;
   padding-left: 8px;
 }
 
-/* line 343, ../sass/bcr-jplayer.scss */
+/* line 344, ../sass/bcr-jplayer.scss */
 div.jp-type-playlist div.jp-playlist a {
   color: #666;
   text-decoration: none;
 }
 
-/* line 347, ../sass/bcr-jplayer.scss */
+/* line 348, ../sass/bcr-jplayer.scss */
 div.jp-type-playlist div.jp-playlist a:hover {
   color: #0d88c1;
 }
 
-/* line 350, ../sass/bcr-jplayer.scss */
+/* line 351, ../sass/bcr-jplayer.scss */
 div.jp-type-playlist div.jp-playlist a.jp-playlist-current {
   color: #0d88c1;
 }
 
-/* line 353, ../sass/bcr-jplayer.scss */
+/* line 354, ../sass/bcr-jplayer.scss */
 div.jp-type-playlist div.jp-playlist div.jp-free-media {
   display: inline;
   margin-left: 20px;
