--- a/themes/bcr_bootstrap/sass/_player.scss
+++ b/themes/bcr_bootstrap/sass/_player.scss
@@ -6,7 +6,7 @@
   right: 75px;
   border: 1px solid black;
   text-transform: uppercase;
-  z-index: 2147483647;
+  z-index: 1000;
   @include header-font;
   padding: 8px 12px 6px;
 
