--- a/themes/bcr_bootstrap/sass/_body.scss
+++ b/themes/bcr_bootstrap/sass/_body.scss
@@ -18,6 +18,11 @@ h1, h2, h3, h4, h5, h6 {
 a, a:link, a:visited {
   color: black !important;
 }
+.node {
+  a, a:link, a:visited {
+    text-decoration: underline;
+  }
+}
 a:hover {
   color: $blue1 !important;
   text-decoration: none !important;
