--- a/themes/bcr_bootstrap/css/style.css
+++ b/themes/bcr_bootstrap/css/style.css
@@ -27,24 +27,29 @@ a, a:link, a:visited {
   color: black !important;
 }
 
-/* line 21, ../sass/_body.scss */
+/* line 22, ../sass/_body.scss */
+.node a, .node a:link, .node a:visited {
+  text-decoration: underline;
+}
+
+/* line 26, ../sass/_body.scss */
 a:hover {
   color: #4AFFD7 !important;
   text-decoration: none !important;
   text-shadow: none !important;
 }
 
-/* line 38, ../sass/_body.scss */
+/* line 43, ../sass/_body.scss */
 #block-menu-menu-streams ul {
   margin: 0px;
   padding: 0px;
 }
-/* line 42, ../sass/_body.scss */
+/* line 47, ../sass/_body.scss */
 #block-menu-menu-streams li a:hover {
   background: none !important;
 }
 
-/* line 49, ../sass/_body.scss */
+/* line 54, ../sass/_body.scss */
 .logo-wrapper, .logo {
   height: 130px !important;
   overflow: hidden;
@@ -54,17 +59,17 @@ a:hover {
   z-index: 1;
 }
 
-/* line 57, ../sass/_body.scss */
+/* line 62, ../sass/_body.scss */
 .logo-wrapper {
   display: none;
 }
 
-/* line 60, ../sass/_body.scss */
+/* line 65, ../sass/_body.scss */
 .logo-wrapper, .menu-wrapper {
   float: none;
 }
 
-/* line 65, ../sass/_body.scss */
+/* line 70, ../sass/_body.scss */
 .region-navigation .navbar-collapse ul.navbar-nav {
   font-family: 'DIN Next W02 Medium', 'DIN Alternate', 'Helvetica Neue', sans-serif;
   text-transform: uppercase;
@@ -72,52 +77,52 @@ a:hover {
   font-weight: bold;
 }
 
-/* line 70, ../sass/_body.scss */
+/* line 75, ../sass/_body.scss */
 .logo {
   width: 200px;
   height: 200px;
   background: url("../images/bcr-logo.gif") no-repeat;
 }
-/* line 76, ../sass/_body.scss */
+/* line 81, ../sass/_body.scss */
 .logo:hover {
   background: url("../images/bcr-logo-hover.png") no-repeat;
 }
 
-/* line 81, ../sass/_body.scss */
+/* line 86, ../sass/_body.scss */
 .node-type-channel {
   background: no-repeat -1px -1px;
   background-size: 100% 700px;
 }
-/* line 84, ../sass/_body.scss */
+/* line 89, ../sass/_body.scss */
 .node-type-channel.bg-blue {
   background-image: url("../images/bg-blue.png");
 }
-/* line 87, ../sass/_body.scss */
+/* line 92, ../sass/_body.scss */
 .node-type-channel.bg-green {
   background-image: url("../images/bg-green.png");
 }
-/* line 90, ../sass/_body.scss */
+/* line 95, ../sass/_body.scss */
 .node-type-channel.bg-purple {
   background-image: url("../images/bg-purple.png");
 }
-/* line 93, ../sass/_body.scss */
+/* line 98, ../sass/_body.scss */
 .node-type-channel.bg-yellow {
   background-image: url("../images/bg-yellow.png");
 }
-/* line 96, ../sass/_body.scss */
+/* line 101, ../sass/_body.scss */
 .node-type-channel.bg-red {
   background-image: url("../images/bg-red.png");
 }
 
-/* line 101, ../sass/_body.scss */
+/* line 106, ../sass/_body.scss */
 .main-container.container {
   padding-bottom: 80px;
 }
-/* line 106, ../sass/_body.scss */
+/* line 111, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-left_1 {
   padding-right: 60px;
 }
-/* line 110, ../sass/_body.scss */
+/* line 115, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-left_1 .pane-bcr-schedule-today-panel-pane-1 .view-bcr-schedule-today {
   font-family: 'DIN Next W02 Medium', 'DIN Alternate', 'Helvetica Neue', sans-serif;
   text-transform: uppercase;
@@ -127,51 +132,51 @@ a:hover {
   margin: 0px auto 0px auto;
   padding-bottom: 30px;
 }
-/* line 115, ../sass/_body.scss */
+/* line 120, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-left_1 .pane-bcr-schedule-today-panel-pane-1 .view-bcr-schedule-today p {
   font-size: 12px;
   color: #666;
 }
-/* line 118, ../sass/_body.scss */
+/* line 123, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-left_1 .pane-bcr-schedule-today-panel-pane-1 .view-bcr-schedule-today p strong {
   font-size: 16px;
   color: black;
 }
-/* line 122, ../sass/_body.scss */
+/* line 127, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-left_1 .pane-bcr-schedule-today-panel-pane-1 .view-bcr-schedule-today p a {
   color: black;
 }
-/* line 130, ../sass/_body.scss */
+/* line 135, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-left_1 .pane-bcr-blocks-bcr-chat {
   margin: 0px auto 0px auto;
   width: 100%;
 }
-/* line 134, ../sass/_body.scss */
+/* line 139, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-left_1 .pane-bcr-blocks-bcr-chat .tlkio iframe {
   height: 400px !important;
 }
-/* line 143, ../sass/_body.scss */
+/* line 148, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-center .panels-flexible-region-4-center-inside {
   padding: 0;
 }
-/* line 147, ../sass/_body.scss */
+/* line 152, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-center .panels-flexible-region-4-center-inside .pane-bcr-blog-recent-panel-pane-1 .pane-title {
   display: none;
 }
-/* line 155, ../sass/_body.scss */
+/* line 160, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-center .panels-flexible-region-4-center-inside .view-bcr-blog-recent .views-row {
   margin: 0px 20px 30px 0px;
 }
-/* line 157, ../sass/_body.scss */
+/* line 162, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-center .panels-flexible-region-4-center-inside .view-bcr-blog-recent .views-row .field-type-image {
   width: 100%;
   height: auto;
 }
-/* line 161, ../sass/_body.scss */
+/* line 166, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-center .panels-flexible-region-4-center-inside .view-bcr-blog-recent .views-row:nth-child(3n) {
   margin-right: 0;
 }
-/* line 166, ../sass/_body.scss */
+/* line 171, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-center .panels-flexible-region-4-center-inside .view-bcr-blog-recent .more-link {
   clear: both;
   text-align: right;
@@ -181,22 +186,22 @@ a:hover {
   font-weight: bold;
 }
 
-/* line 183, ../sass/_body.scss */
+/* line 188, ../sass/_body.scss */
 .flippy {
   float: left;
   margin: 30px 0px 30px 0px !important;
 }
-/* line 187, ../sass/_body.scss */
+/* line 192, ../sass/_body.scss */
 .flippy li a {
   font-size: 2em;
   color: #ccc !important;
 }
-/* line 190, ../sass/_body.scss */
+/* line 195, ../sass/_body.scss */
 .flippy li a:hover {
   color: #4AFFD7 !important;
 }
 
-/* line 200, ../sass/_body.scss */
+/* line 205, ../sass/_body.scss */
 #block-views-recommended-blog-posts-block .views-row {
   display: inline-block;
   vertical-align: top;
@@ -814,55 +819,58 @@ a:hover {
   display: inline-block;
   max-width: 280px;
   top: -7px !important;
+  white-space: nowrap;
 }
 
-/* line 6, ../sass/_airtime.scss */
+/* line 7, ../sass/_airtime.scss */
 #block-airtimewidgets-airtime-nowplaying {
   position: relative;
   top: 13px;
-  max-width: 700px;
+  width: 500px;
   display: inline-block;
+  white-space: nowrap;
 }
-/* line 11, ../sass/_airtime.scss */
+/* line 13, ../sass/_airtime.scss */
 #block-airtimewidgets-airtime-nowplaying .container {
   padding-right: 0;
 }
 
-/* line 16, ../sass/_airtime.scss */
+/* line 18, ../sass/_airtime.scss */
 #headerLiveHolder ul li, #headerLiveTrackHolder ul li {
   overflow: visible;
   height: 18px;
 }
 
-/* line 21, ../sass/_airtime.scss */
+/* line 23, ../sass/_airtime.scss */
 #headerLiveHolder {
+  width: 400px !important;
   font-family: 'DIN Next W02 Medium', 'DIN Alternate', 'Helvetica Neue', sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.01em;
   font-weight: bold;
 }
-/* line 29, ../sass/_airtime.scss */
+/* line 31, ../sass/_airtime.scss */
 #headerLiveHolder h4 {
   display: none;
 }
-/* line 33, ../sass/_airtime.scss */
+/* line 35, ../sass/_airtime.scss */
 #headerLiveHolder li {
   display: inline-block;
   font-size: 12px !important;
   line-height: 18px !important;
 }
-/* line 39, ../sass/_airtime.scss */
+/* line 41, ../sass/_airtime.scss */
 #headerLiveHolder .current {
   width: 100% !important;
   margin: 0;
   padding: 0;
 }
-/* line 45, ../sass/_airtime.scss */
+/* line 47, ../sass/_airtime.scss */
 #headerLiveHolder .next {
   width: auto !important;
   display: block;
 }
-/* line 50, ../sass/_airtime.scss */
+/* line 52, ../sass/_airtime.scss */
 #headerLiveHolder .time-elapsed,
 #headerLiveHolder .time-remaining {
   position: relative;
@@ -872,22 +880,22 @@ a:hover {
   float: right;
 }
 
-/* line 60, ../sass/_airtime.scss */
+/* line 62, ../sass/_airtime.scss */
 #headerLiveHolder ul li.current {
   color: black;
 }
 
-/* line 64, ../sass/_airtime.scss */
+/* line 66, ../sass/_airtime.scss */
 #headerLiveHolder ul li span#time-elapsed {
   right: auto;
 }
 
-/* line 68, ../sass/_airtime.scss */
+/* line 70, ../sass/_airtime.scss */
 #headerLiveHolder ul li span#time-elapsed:before {
   content: "+";
 }
 
-/* line 72, ../sass/_airtime.scss */
+/* line 74, ../sass/_airtime.scss */
 #headerLiveHolder ul li span#time-remaining:before {
   content: "-";
 }
