added mixcloud menu elment

--- a/themes/bcr_bootstrap/css/style.css
+++ b/themes/bcr_bootstrap/css/style.css
@@ -464,19 +464,21 @@ a:hover {
 .menu-wrapper .menu .leaf-facebook-link,
 .menu-wrapper .menu .leaf-youtube-link,
 .menu-wrapper .menu .leaf-instagram-link,
-.menu-wrapper .menu .leaf-mail-link {
+.menu-wrapper .menu .leaf-mail-link,
+.menu-wrapper .menu .leaf-mixcloud-link {
   float: left;
   width: 34px;
   height: 34px;
   margin-right: 10px;
 }
-/* line 26, ../sass/_menus.scss */
+/* line 28, ../sass/_menus.scss */
 .menu-wrapper .menu .leaf-soundcloud-link a,
 .menu-wrapper .menu .leaf-twitter-link a,
 .menu-wrapper .menu .leaf-facebook-link a,
 .menu-wrapper .menu .leaf-youtube-link a,
 .menu-wrapper .menu .leaf-instagram-link a,
-.menu-wrapper .menu .leaf-mail-link a {
+.menu-wrapper .menu .leaf-mail-link a,
+.menu-wrapper .menu .leaf-mixcloud-link a {
   width: 100%;
   height: 100%;
   float: left;
@@ -487,57 +489,66 @@ a:hover {
   margin-right: 0;
   margin-top: 0 !important;
 }
-/* line 36, ../sass/_menus.scss */
+/* line 38, ../sass/_menus.scss */
 .menu-wrapper .menu .leaf-soundcloud-link a:hover,
 .menu-wrapper .menu .leaf-twitter-link a:hover,
 .menu-wrapper .menu .leaf-facebook-link a:hover,
 .menu-wrapper .menu .leaf-youtube-link a:hover,
 .menu-wrapper .menu .leaf-instagram-link a:hover,
-.menu-wrapper .menu .leaf-mail-link a:hover {
+.menu-wrapper .menu .leaf-mail-link a:hover,
+.menu-wrapper .menu .leaf-mixcloud-link a:hover {
   border: 0;
   opacity: 1;
 }
-/* line 43, ../sass/_menus.scss */
+/* line 45, ../sass/_menus.scss */
+.menu-wrapper .menu .leaf-mixcloud-link {
+  margin-top: 15px;
+}
+/* line 47, ../sass/_menus.scss */
+.menu-wrapper .menu .leaf-mixcloud-link a {
+  background-image: url(../images/menu-mixcloud.png);
+}
+/* line 51, ../sass/_menus.scss */
 .menu-wrapper .menu .leaf-soundcloud-link {
   margin-top: 15px;
 }
-/* line 45, ../sass/_menus.scss */
+/* line 53, ../sass/_menus.scss */
 .menu-wrapper .menu .leaf-soundcloud-link a {
   background-image: url(../images/menu-soundcloud.png);
 }
-/* line 49, ../sass/_menus.scss */
+/* line 57, ../sass/_menus.scss */
 .menu-wrapper .menu .leaf-twitter-link {
   margin-top: 15px;
 }
-/* line 51, ../sass/_menus.scss */
+/* line 59, ../sass/_menus.scss */
 .menu-wrapper .menu .leaf-twitter-link a {
   background-image: url(../images/menu-twitter.png);
 }
-/* line 55, ../sass/_menus.scss */
+/* line 63, ../sass/_menus.scss */
 .menu-wrapper .menu .leaf-facebook-link {
   margin-top: 15px;
 }
-/* line 57, ../sass/_menus.scss */
+/* line 65, ../sass/_menus.scss */
 .menu-wrapper .menu .leaf-facebook-link a {
   background-image: url(../images/menu-facebook.png);
 }
-/* line 61, ../sass/_menus.scss */
+/* line 69, ../sass/_menus.scss */
 .menu-wrapper .menu .leaf-youtube-link {
   clear: both;
 }
-/* line 63, ../sass/_menus.scss */
+/* line 71, ../sass/_menus.scss */
 .menu-wrapper .menu .leaf-youtube-link a {
   background-image: url(../images/menu-youtube.png);
 }
-/* line 68, ../sass/_menus.scss */
+/* line 76, ../sass/_menus.scss */
 .menu-wrapper .menu .leaf-instagram-link a {
   background-image: url(../images/menu-instagram.png);
 }
-/* line 73, ../sass/_menus.scss */
+/* line 81, ../sass/_menus.scss */
 .menu-wrapper .menu .leaf-mail-link a {
   background-image: url(../images/menu-mail.png);
 }
-/* line 79, ../sass/_menus.scss */
+/* line 87, ../sass/_menus.scss */
 .menu-wrapper .navbar-brand {
   display: block;
   width: 150px;
@@ -546,16 +557,16 @@ a:hover {
   background-size: 150px;
   margin-bottom: 20px;
 }
-/* line 85, ../sass/_menus.scss */
+/* line 93, ../sass/_menus.scss */
 .menu-wrapper .navbar-brand:hover {
   background-position: bottom left;
 }
-/* line 90, ../sass/_menus.scss */
+/* line 98, ../sass/_menus.scss */
 .homepage-body .menu-wrapper .navbar-brand {
   display: none;
 }
 
-/* line 97, ../sass/_menus.scss */
+/* line 105, ../sass/_menus.scss */
 .region-navigation {
   background: none;
   border: 0px;
@@ -563,14 +574,14 @@ a:hover {
   padding-right: 0px;
   margin-top: 0px !important;
 }
-/* line 104, ../sass/_menus.scss */
+/* line 112, ../sass/_menus.scss */
 .region-navigation .menu-wrapper {
   position: fixed;
   top: 100px;
   margin-left: 10px;
   z-index: 8;
 }
-/* line 111, ../sass/_menus.scss */
+/* line 119, ../sass/_menus.scss */
 .region-navigation ul.navbar-nav {
   font-family: 'DIN Next W02 Medium', 'DIN Alternate', 'Helvetica Neue', sans-serif;
   text-transform: uppercase;
@@ -578,14 +589,14 @@ a:hover {
   font-weight: bold;
   z-index: 10;
 }
-/* line 116, ../sass/_menus.scss */
+/* line 124, ../sass/_menus.scss */
 .region-navigation ul.navbar-nav li {
   display: block;
   margin: 5px 0;
   float: none;
   font-size: 14px;
 }
-/* line 123, ../sass/_menus.scss */
+/* line 131, ../sass/_menus.scss */
 .region-navigation ul.navbar-nav li a {
   padding: 3px 0px 0px 0px !important;
   margin: 5px 0;
@@ -595,27 +606,27 @@ a:hover {
   line-height: 1em;
   border-bottom: 1px solid transparent;
 }
-/* line 131, ../sass/_menus.scss */
+/* line 139, ../sass/_menus.scss */
 .region-navigation ul.navbar-nav li a:hover {
   color: black !important;
   text-decoration: none !important;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
-/* line 138, ../sass/_menus.scss */
+/* line 146, ../sass/_menus.scss */
 .region-navigation ul.navbar-nav li.active-trail a.active {
   background: none !important;
   text-decoration: none !important;
   border-bottom: 1px solid black;
 }
-/* line 154, ../sass/_menus.scss */
+/* line 162, ../sass/_menus.scss */
 .region-navigation #block-menu-menu-main-2 .menu .leaf a {
   padding-top: 0px !important;
 }
-/* line 156, ../sass/_menus.scss */
+/* line 164, ../sass/_menus.scss */
 .region-navigation #block-menu-menu-main-2 .menu .leaf a:hover {
   background: none;
 }
-/* line 163, ../sass/_menus.scss */
+/* line 171, ../sass/_menus.scss */
 .region-navigation a {
   font-size: .9em;
   letter-spacing: 1px;
