style fixes, main menu update, block render error in banner insert block

--- a/themes/bcr_bootstrap/sass/_blog.scss
+++ b/themes/bcr_bootstrap/sass/_blog.scss
@@ -61,7 +61,7 @@
   }
   .service-links {
     #twitter-widget-0 {
-      position: relative;
+      position: relative !important;
       top: 6px;
       left: 10px;
     }
