--- a/themes/bcr_bootstrap/sass/_body.scss
+++ b/themes/bcr_bootstrap/sass/_body.scss
@@ -17,10 +17,12 @@ h1, h2, h3, h4, h5, h6 {
 
 a, a:link, a:visited {
   color: black !important;
+//  text-decoration: none !important;
+
 }
 .node {
   a, a:link, a:visited {
-    text-decoration: underline;
+    text-decoration: underline !important;
   }
 }
 a:hover {
