--- a/themes/bcr_bootstrap/css/style.css
+++ b/themes/bcr_bootstrap/css/style.css
@@ -27,29 +27,29 @@ a, a:link, a:visited {
   color: black !important;
 }
 
-/* line 22, ../sass/_body.scss */
+/* line 24, ../sass/_body.scss */
 .node a, .node a:link, .node a:visited {
-  text-decoration: underline;
+  text-decoration: underline !important;
 }
 
-/* line 26, ../sass/_body.scss */
+/* line 28, ../sass/_body.scss */
 a:hover {
   color: #4AFFD7 !important;
   text-decoration: none !important;
   text-shadow: none !important;
 }
 
-/* line 43, ../sass/_body.scss */
+/* line 45, ../sass/_body.scss */
 #block-menu-menu-streams ul {
   margin: 0px;
   padding: 0px;
 }
-/* line 47, ../sass/_body.scss */
+/* line 49, ../sass/_body.scss */
 #block-menu-menu-streams li a:hover {
   background: none !important;
 }
 
-/* line 54, ../sass/_body.scss */
+/* line 56, ../sass/_body.scss */
 .logo-wrapper, .logo {
   height: 130px !important;
   overflow: hidden;
@@ -59,17 +59,17 @@ a:hover {
   z-index: 1;
 }
 
-/* line 62, ../sass/_body.scss */
+/* line 64, ../sass/_body.scss */
 .logo-wrapper {
   display: none;
 }
 
-/* line 65, ../sass/_body.scss */
+/* line 67, ../sass/_body.scss */
 .logo-wrapper, .menu-wrapper {
   float: none;
 }
 
-/* line 70, ../sass/_body.scss */
+/* line 72, ../sass/_body.scss */
 .region-navigation .navbar-collapse ul.navbar-nav {
   font-family: 'DIN Next W02 Medium', 'DIN Alternate', 'Helvetica Neue', sans-serif;
   text-transform: uppercase;
@@ -77,52 +77,52 @@ a:hover {
   font-weight: bold;
 }
 
-/* line 75, ../sass/_body.scss */
+/* line 77, ../sass/_body.scss */
 .logo {
   width: 200px;
   height: 200px;
   background: url("../images/bcr-logo.gif") no-repeat;
 }
-/* line 81, ../sass/_body.scss */
+/* line 83, ../sass/_body.scss */
 .logo:hover {
   background: url("../images/bcr-logo-hover.png") no-repeat;
 }
 
-/* line 86, ../sass/_body.scss */
+/* line 88, ../sass/_body.scss */
 .node-type-channel {
   background: no-repeat -1px -1px;
   background-size: 100% 700px;
 }
-/* line 89, ../sass/_body.scss */
+/* line 91, ../sass/_body.scss */
 .node-type-channel.bg-blue {
   background-image: url("../images/bg-blue.png");
 }
-/* line 92, ../sass/_body.scss */
+/* line 94, ../sass/_body.scss */
 .node-type-channel.bg-green {
   background-image: url("../images/bg-green.png");
 }
-/* line 95, ../sass/_body.scss */
+/* line 97, ../sass/_body.scss */
 .node-type-channel.bg-purple {
   background-image: url("../images/bg-purple.png");
 }
-/* line 98, ../sass/_body.scss */
+/* line 100, ../sass/_body.scss */
 .node-type-channel.bg-yellow {
   background-image: url("../images/bg-yellow.png");
 }
-/* line 101, ../sass/_body.scss */
+/* line 103, ../sass/_body.scss */
 .node-type-channel.bg-red {
   background-image: url("../images/bg-red.png");
 }
 
-/* line 106, ../sass/_body.scss */
+/* line 108, ../sass/_body.scss */
 .main-container.container {
   padding-bottom: 80px;
 }
-/* line 111, ../sass/_body.scss */
+/* line 113, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-left_1 {
   padding-right: 60px;
 }
-/* line 115, ../sass/_body.scss */
+/* line 117, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-left_1 .pane-bcr-schedule-today-panel-pane-1 .view-bcr-schedule-today {
   font-family: 'DIN Next W02 Medium', 'DIN Alternate', 'Helvetica Neue', sans-serif;
   text-transform: uppercase;
@@ -132,51 +132,51 @@ a:hover {
   margin: 0px auto 0px auto;
   padding-bottom: 30px;
 }
-/* line 120, ../sass/_body.scss */
+/* line 122, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-left_1 .pane-bcr-schedule-today-panel-pane-1 .view-bcr-schedule-today p {
   font-size: 12px;
   color: #666;
 }
-/* line 123, ../sass/_body.scss */
+/* line 125, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-left_1 .pane-bcr-schedule-today-panel-pane-1 .view-bcr-schedule-today p strong {
   font-size: 16px;
   color: black;
 }
-/* line 127, ../sass/_body.scss */
+/* line 129, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-left_1 .pane-bcr-schedule-today-panel-pane-1 .view-bcr-schedule-today p a {
   color: black;
 }
-/* line 135, ../sass/_body.scss */
+/* line 137, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-left_1 .pane-bcr-blocks-bcr-chat {
   margin: 0px auto 0px auto;
   width: 100%;
 }
-/* line 139, ../sass/_body.scss */
+/* line 141, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-left_1 .pane-bcr-blocks-bcr-chat .tlkio iframe {
   height: 400px !important;
 }
-/* line 148, ../sass/_body.scss */
+/* line 150, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-center .panels-flexible-region-4-center-inside {
   padding: 0;
 }
-/* line 152, ../sass/_body.scss */
+/* line 154, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-center .panels-flexible-region-4-center-inside .pane-bcr-blog-recent-panel-pane-1 .pane-title {
   display: none;
 }
-/* line 160, ../sass/_body.scss */
+/* line 162, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-center .panels-flexible-region-4-center-inside .view-bcr-blog-recent .views-row {
   margin: 0px 20px 30px 0px;
 }
-/* line 162, ../sass/_body.scss */
+/* line 164, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-center .panels-flexible-region-4-center-inside .view-bcr-blog-recent .views-row .field-type-image {
   width: 100%;
   height: auto;
 }
-/* line 166, ../sass/_body.scss */
+/* line 168, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-center .panels-flexible-region-4-center-inside .view-bcr-blog-recent .views-row:nth-child(3n) {
   margin-right: 0;
 }
-/* line 171, ../sass/_body.scss */
+/* line 173, ../sass/_body.scss */
 .main-container.container .panels-flexible-4 .panels-flexible-region-4-center .panels-flexible-region-4-center-inside .view-bcr-blog-recent .more-link {
   clear: both;
   text-align: right;
@@ -186,22 +186,22 @@ a:hover {
   font-weight: bold;
 }
 
-/* line 188, ../sass/_body.scss */
+/* line 190, ../sass/_body.scss */
 .flippy {
   float: left;
   margin: 30px 0px 30px 0px !important;
 }
-/* line 192, ../sass/_body.scss */
+/* line 194, ../sass/_body.scss */
 .flippy li a {
   font-size: 2em;
   color: #ccc !important;
 }
-/* line 195, ../sass/_body.scss */
+/* line 197, ../sass/_body.scss */
 .flippy li a:hover {
   color: #4AFFD7 !important;
 }
 
-/* line 205, ../sass/_body.scss */
+/* line 207, ../sass/_body.scss */
 #block-views-recommended-blog-posts-block .views-row {
   display: inline-block;
   vertical-align: top;
@@ -445,7 +445,7 @@ a:hover {
 }
 /* line 63, ../sass/_blog.scss */
 .blog-post-region .service-links #twitter-widget-0 {
-  position: relative;
+  position: relative !important;
   top: 6px;
   left: 10px;
 }
