--- a/themes/bcr_bootstrap/sass/_menus.scss
+++ b/themes/bcr_bootstrap/sass/_menus.scss
@@ -136,6 +136,7 @@ body {
       display: inline-block;
       line-height: 1em;
       border-bottom: 1px solid transparent;
+      font-weight: 900 !important;
       &:hover {
         color: black !important;
         text-decoration: none !important;
