--- a/themes/bcr_bootstrap/sass/style.scss
+++ b/themes/bcr_bootstrap/sass/style.scss
@@ -8,6 +8,7 @@
 @import "channel-display";
 @import "blog";
 @import "menus";
+@import "links";
 @import "page";
 @import "player";
 @import "airtime";
