--- a/themes/bcr_bootstrap/sass/_var.scss
+++ b/themes/bcr_bootstrap/sass/_var.scss
@@ -30,3 +30,27 @@ $logo_height: 200px;
   letter-spacing: 0.01em;
   font-weight: bold;
 }
+
+
+@mixin article-headlines-link {
+  color: black;
+  text-decoration: none !important;
+  &:hover {
+    color: $blue;
+  }
+}
+@mixin channel-thumb-title-link {
+  color: white;
+  text-decoration: none !important;
+  &:hover {
+    opacity: 0;
+  }
+}
+@mixin node-body-link {
+  color: black;
+  text-decoration: underline !important;
+  &:hover {
+    text-decoration: none !important;
+    color: $blue1;
+  }
+}
